--- a/class-10-js_debugging-wireframe_part_2/demo/clean-code/styles.css
+++ b/class-10-js_debugging-wireframe_part_2/demo/clean-code/styles.css
@@ -1,34 +1,52 @@
+/*
+
+    TOC
+    - overall styles
+    - target styles
+    - link styles
+
+    - main elements or containers
+        body, main, container elements
+    - each container
+        things inside of it 
+
+*/
+
 body {
-height: 100%;
-width: 100%;
+    height: 100%;
+    width: 100%;
 }
+
 .red {
-background-color: red;
+    background-color: red;
 }
-/*.red:hover {
-    background-color: blue;
-}*/
-.white{
-background-color: white;
+
+.white {
+    background-color: white;
 }
-/*.orange  {
-    background-color: orange;
-    height: 20%;
-}*/
+
+
+
+
+
+
+
+
+/*                           target styles  */
+
 #target {
-margin: 30% auto;
-height: 300px;
-width: 300px;
-/*text-align: center;
-display: flex;*/
-position: relative;
+    margin: 30% auto;
+    height: 300px;
+    width: 300px;
+    position: relative;
 }
+
 section {
-position: absolute;
-margin: 0 auto;
-padding: 12% 12%;
-height: 50%;
-width: 50%;
-border-radius: 50%;
-box-sizing: border-box;
+    position: absolute;
+    margin: 0 auto;
+    padding: 12% 12%;
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    box-sizing: border-box;
 }
