--- a/class-14-js_inheritance-css_animations/demo/layout/styles.css
+++ b/class-14-js_inheritance-css_animations/demo/layout/styles.css
@@ -1,57 +1,113 @@
-body {
-    margin: 0;
-    padding: 50px 20%;
+/* Play with margins */
+.auto-side-margins {
+    margin: 0 auto;
 }
 
+.big-margins {
+    margin: 300px;
+}
 
+/* Play with positioning */
+/* What happens if you nest different position types
+   inside of each other? eg. an absolute inside a relative 
+   or an absolute inside a fixed
+*/
 
-/* slide header down on hover */
-header {
-    border: solid black 25px;
-    text-align: center;
-    box-sizing: border-box;
-    height: 300px;
-    top: -300px;
+.relative {
     position: relative;
-    transform: skew(20deg);
-    transition: top 2s ease-out, transform 4s ease;
 }
 
-header:hover {
-    transform: skew(-20deg);
-    top: 0;
+.relative-bottom {
+    position: relative;
+    bottom: 20px;
 }
 
-header ul { 
-    list-style: none;
+.fixed-right {
+    position: fixed;
+    right: 0;
+}
+
+.fixed-bottom-left {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.absolute-right {
+    position: absolute; 
+    right: 500px;
+}
+
+.absolute-top {
+    position: absolute; 
+    right: 30px;
+    top: 5px;
+}
+
+.float-right {
+    float: right;
+}
+
+.float-clear {
+    clear: both;
+}
+
+/* Play with widths and heights */
+/* How do they affect different position types? display types? */
+.half-percentage-width {
+    width: 50%;
+}
+
+.half-percentage-height {
+    height: 50%;
+}
+
+.half-viewport-height {
+    height: 50vh;
+}
+
+.half-viewport-width {
+    width: 50vh;
+}
+
+.set-width-600 {
+    width: 600px;
+}
+
+.set-height-600 {
+    height: 600px;
+}
+
+/* Play with display */
+
+.flexy {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* horizontal spacing */
+    align-items: flex-end;  /* vertical spacing */
+}
+
+.inline {
+    display: inline;
+}
+
+.inline-block {
+    display: inline-block;
 }
 
 
 
-/* open footer when mouseover aside */
-article footer {
-    opacity: 0;
-    height: 0;
-    transition: all 3s ease;
+
+/*   Outlines */
+
+header, main, footer {
+    border: solid darkblue 1px;
 }
 
-article footer.show {
-    opacity: 1;
-    height: 200px;
+h1, p, li {
+    border: dotted green 1px;
 }
 
-
-
-/* blink */
-h2 {
-    animation: blink 1s ease 0s infinite;
-}
-
-@keyframes blink {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+nav, ul, aside, article {
+    border: dashed red 1px;
 }
